# evaluate-ocr-rag-systems

./: .gitignore  README.md  pyproject.toml  test.py  test_vespa.py  test_vespa_indexing.py  test_vespa_inference.py  vespa_vision_rag.py
colpal/: services.xml
colpal/schemas/: pdf_page.sd
logs/failed_documents/: failed_documents_1735757189.yaml
src/interfaces/: interfaces.py
src/ocr_benchmark/: base.py
src/ocr_benchmark/engines/: config.py  doc_tr.py  easy_ocr.py  paddle_ocr  tesseract.py
src/ocr_benchmark/engines/vespa/: datatypes.py  exceptions.py  model.py  pdf_processor.py  prepare_feed.py  setup.py  utils.py  vespa_config.yaml
src/ocr_benchmark/engines/vespa/indexing/: pdf_processor.py  prepare_feed.py  run.py
src/ocr_benchmark/engines/vespa/retrieval/: run.py
src/ocr_benchmark/utils/: image_processing.py  pdf_processing.py
src/pdf_embedding_decider/: analyze.py  datatypes.py  interfaces.py
src/pdf_embedding_decider/components/: layout_analyzer.py  table_detector.py  text_density_analyzer.py  visual_element_analyzer.py
src/prompts/: llama_vision.py
src/vespa/: datatypes.py  setup.py  vespa_config.yaml
src/vespa/indexing/: pdf_processor.py  prepare_feed.py  run.py
src/vespa/retrieval/: run.py
test/: services.xml
test2/: services.xml
test3/: services.xml
test3/schemas/: pdf_page.sd
test4/: services.xml
